[package]
name = "wave"
version = "0.1.0"
edition = "2021"
description = "Use WireWay's Wave API to fetch music by search query"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
