[package]
name = "wirewave"
version = "0.1.4"
edition = "2021"
description = "Use WireWay's Wave API to fetch music by search query"
license = "MIT"
repository = "https://github.com/waradu/wirewave"
readme = "README.md"
authors = ["Waradu"]

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
